[package]
name = "nimble"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version="0.5.1",features=["tls","json","secrets"]}
miette = "7.4.0"
serde = {version="1.0.216",features=["derive"]}
thiserror = "2.0.8"
chrono = "0.4.39"
tokio-postgres = {version="0.7.12",features=["with-uuid-1"]}
serde_json = "1.0.134"
uuid = {version="1.11.0",features=["serde"]}
aws-sdk-sns = "1.52.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
